--- a/mams_dataset/Info.ipynb
+++ b/mams_dataset/Info.ipynb
@@ -31871,7 +31871,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.2"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e628f4b303e3e127024d4a99d37953c39bbfbfaea9adc36ccec1a7d58a58ad5e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
