Updates To XML Parsing

--- a/Project Notebook.ipynb
+++ b/Project Notebook.ipynb
@@ -2973,6 +2973,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tecnologies used\n",
+    "    1.NLTK #For Language Analysis\n",
+    "    2.Torch #For ML\n",
+    "    3.Pandas #For DataManipulation\n",
+    "    4.BeautifulSoup #For XML Parsing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
